<resources>
    <string name="app_name">ChooseYourOwnBeer</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="our_beers">Our beers</string>
    <string name="go_to_detail">Go to detail</string>
    <string name="search">Search</string>
    <string name="results">Results</string>
    <string name="ichnusa">Ichnusa unfiltered</string>
    <string name="birra_messina">Birra Messina salt crystals</string>
    <string name="tennents_super">Tennent\'s Super</string>
    <string name="small_size">33 cl</string>
    <string name="medium_size">66 cl</string>
    <string name="preview_ichnusa">Bright golden yellow color with fine and persistent foam.</string>
    <string name="preview_messina">Bright golden yellow color with a natural opalescence,
        it has a compact and persistent foam.</string>
    <string name="preview_tennents">Beautiful bright golden yellow color with a white head of little
        persistence.</string>
    <string name="detail_ichnusa">Bright golden yellow color with fine and persistent foam.
        The nose releases aromas of orange blossom, caramel and hops, accompanied by a delicate hint
        of honey in a complex of elegance and pleasantness that is also confirmed on the palate,
        where freshness and roundness envelop a moderately persistence bitter and well balanced.
        \ u000D \ n \ u000D \ nIdeal for an aperitif of cheeses and salami, it also goes well with
        tasty baked fish.</string>
    <string name="content_description">beerUi image</string>
    <string name="favourite_button">favourite</string>
    <string name="settings_text">Settings</string>
    <string name="profile_name_text">Full Name</string>
    <string name="app_version_text">App version 1.0.0</string>
    <string name="email_input_text">Insert your email</string>
    <string name="contact_btn_text">Contact us</string>
    <string name="logout_btn_text">Logout</string>
    <string name="result_text">2 Result</string>
    <string name="beer_detail_error">Error retrieving beerUi details.</string>
    <string name="search_result_text">%s Results</string>
    <string name="search_result_nothing_text">No items found</string>
</resources>