<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    tools:context=".BeerDetail">

    <View
    android:id="@+id/Ichusa"
    android:layout_width="@dimen/layout_image_beer"
    android:layout_height="@dimen/layout_image_beer2"
    android:layout_alignParentStart="true"
    android:layout_marginLeft="@dimen/image_margin_left"
    android:layout_alignParentTop="true"
    android:layout_marginTop="@dimen/Top_layout_image"
    android:background="@drawable/ichnusa" />
<!--ImageIchnusa-->

    <ImageButton
        android:id="@+id/favourite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:contentDescription="@string/favourite_button"
        app:srcCompat="@drawable/emptystar" />
  <!--emptyStar-->



    <TextView
        android:id="@+id/titleBeer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_title"
        android:gravity="top"
        android:textAppearance="@style/beer_name.detailed_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/ichnusa" />
    <!--Icnhusa Title-->

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/beer_text.size_detailed_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/small_size" />
    <!-- cl -->

    <TextView
        android:id="@+id/longDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_text"
        android:text="@string/detail_ichnusa"
        android:textAppearance="@style/beer_text.detailed_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/detail_ichnusa" />
    <!-- Colore giallo dorato luminoso con schiuma fine e persistente.
    Al naso sprigiona aromi di fiori d'arancio, caramello e luppolo, accompagnati da un delicato
    sentore di miele in un complesso di eleganza e piacevolezza
    che si conferma anche all'assaggio, dove freschezza e rotondità avvolgono una persistenza
    moderatamente amarognola di grande equilibrio. Ideale per un aperitivo di formaggi e salumi,
    si accompagna bene anche a pesci al forno saporiti. -->
</LinearLayout >